<resources>
    <string name="app_name">Quick</string>
    <string name="login_btn">Already have an account? Login</string>
    <string name="joinbtn">join now</string>
    <string name="sellerbtn">seller account</string>
    <string name="or_lable">OR</string>
    <string name="customerbtn">customer account</string>
    <string name="emp_lable">Add Employee</string>
    <string name="todo">TODO</string>
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="new_to_quick_create_an_account">new to quick? create an account</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>





    <string name="product_name">Product Name :</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="product_price">Product Price :</string>
    <string name="description">Description :</string>
    <string name="add_image">Add Image :</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="update_product_details">Update and Delete Product</string>
    <string name="cancel">Delete</string>

    <string name="product_name1">Product name</string>
    <string name="product_name2">Product name</string>
    <string name="confirm_order">confirm order</string>
    <string name="search_your_order">Search your Order</string>
    <string name="todo1">TODO</string>
    <string name="total_payment">Total Payment</string>
    <string name="PRICE">10 000.00</string>
    <string name="pay_now">pay now</string>
    <string name="product_view">Product view</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">buy now</string>
    <string name="IMG1">TODO</string>

    <string name="vehicle_no">Vehicle No</string>
    <string name="add_employee">Add employee</string>
    <string name="phone_number">Phone Number</string>
    <string name="employee_name">Employee name</string>
    <string name="upload_image">upload image</string>
    <string name="add_employee2">ADD EMPLOYEE</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="employee_details">Employee Details</string>
    <string name="mr_name">Mr name</string>
    <string name="assign_employee">ASSIGN EMPLOYEE</string>
    <string name="PNUMBER">0110000777</string>


</resources>