<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".yourorder">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:background="@drawable/inputs_btn"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/search_your_order"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"

        />

    <TextView
        android:id="@+id/textname"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="470dp"
        android:drawableLeft="@android:drawable/sym_def_app_icon"
        android:selectAllOnFocus="false"
        android:text="Product name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textname2"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="378dp"
        android:drawableLeft="@android:drawable/sym_def_app_icon"
        android:selectAllOnFocus="false"
        android:text="@string/product_name1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textname3"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="298dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="283dp"
        android:drawableLeft="@android:drawable/sym_def_app_icon"
        android:selectAllOnFocus="false"
        android:text="@string/product_name2"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic" />
    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/confirm_order"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"

        />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="476dp"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="392dp"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="294dp"
        app:srcCompat="@android:drawable/alert_light_frame"
        android:contentDescription="TODO" />


</RelativeLayout>