<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".ChooseEmpActivity">



    <Button
        android:id="@+id/addemp_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/assign_employee"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"

        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="435dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="618dp"
        android:text="@string/employee_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/textname"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="380dp"
        android:text="@string/mr_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/imageView6"/>


    <TextView
        android:id="@+id/pnumber"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="350dp"
        android:text="@string/PNUMBER"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/textname"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="320dp"
        android:text="employee@sample.com"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        android:layout_below="@+id/imageView6"/>
    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:text="Delete Employee"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"

        />
</RelativeLayout>