<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    tools:context=".orderManagement">

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="618dp"
        android:text="@string/product_view"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="325dp"
        android:layout_height="213dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="399dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_above="@+id/imageButton4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-11dp"
        android:layout_marginBottom="-60dp"
        app:srcCompat="@drawable/ic_baseline_navigate_next_24"
        android:contentDescription="@string/IMG1" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="338dp"
        android:layout_marginBottom="496dp"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="335dp"
        android:text="Rs 1,400"
        android:textColor="@android:color/black"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="339dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="280dp"
        android:text="Description"
        android:textColor="@android:color/black"
        android:textSize="28dp" />

    <Button
        android:id="@+id/buynow_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="@string/buy_now"

        android:textColor="@android:color/white"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/addcart_btn"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="69dp"
        android:background="@drawable/buttons"

        android:padding="20dp"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/address_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="153dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:text="add Address"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"

        />


</RelativeLayout>